<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
  -->

<resources>
    <string name="app_name" translatable="false">Quizzer: Simpsons Fan</string>
    <string name="action_settings">Settings</string>

    <string name="certificatesEndpoint" translatable="false">/certificates/</string>
    <string name="questionsEndpoint" translatable="false">/polls/simpsons-</string>
    <string name="answersEndpoint" translatable="false">/votes</string>
    <string name="serviceRootUrl" translatable="false">http://sky.loxal.net:82</string>

    <string name="empty_question">…</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="previous_question">Previous Question</string>
    <string name="certificate">Certificate</string>
    <string name="next_question">Next Question</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="id">ID</string>
    <string name="incorrect_answers">Incorrect Answers</string>
    <string name="score">Score</string>
    <string name="status">Status</string>
    <string name="total_questions">Total Questions</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="certificates">Certificates</string>
</resources>
