<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.loxal.quizzer.client.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:text="@string/empty_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        tools:text="Question" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerVertical="true">

    </RadioGroup>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="restart"
        android:text="@string/restart"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/restart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/certificate"
        android:src="@mipmap/ic_verified_user_black_48dp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/controlsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_question"
            android:onClick="back"
            android:text="@string/back"
            android:textAllCaps="false"
            tools:text="Back" />

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_question"
            android:onClick="next"
            android:text="@string/next"
            android:textAllCaps="false"
            tools:text="Next" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/controlsContainer"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:progress="0"
        android:visibility="visible"
        tools:visibility="visible" />

</RelativeLayout>
