<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="41dp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statusCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="10dp" />

            <CheckBox
                android:id="@+id/certificateStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/failed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/scoreCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/certificateScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/idCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/certificateId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:text="ID Placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/correctAnswersCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/certificateCorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Correct Answers Count" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/incorrectAnswersCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_answers" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/certificateIncorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Incorrect Answers Count" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalQuestionsCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_questions" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/certificateQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Questions" />
        </TableRow>

    </TableLayout>
